tests/negative/test_decl_bad_type.orb
fnc main() () {
    let (x:(i32 cn) 500);
    let (y:u16 x);
};